<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/main"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:weightSum="1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
        




        <EditText
            android:hint="Nom"
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            tools:ignore="HardcodedText" />


        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/prenom"
            android:inputType="text" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/datenaissance"
                android:hint="@string/date_de_naissance" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Profile Picture Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/photo_de_profil"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/imageViewSelectedPhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginEnd="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btnSelectPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/s_lectionner_une_photo"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>


            </LinearLayout>
        </LinearLayout>

        <!-- Profile Picture Section -->



        <EditText
            android:id="@+id/idetudiant"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="number" />

        <Button
            android:id="@+id/valider"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/valider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/res"
            android:layout_weight="0.04" />


        <Button
            android:id="@+id/supprimer"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/supprimer" />
        <Button
            android:id="@+id/chercher"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/chercher" />
        <Button
            android:id="@+id/lister"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Lister" />




    </LinearLayout>
</ScrollView>
